--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
 				<section>
 					<p class="italic">Are we stronger <strong>together</strong> or <strong>alone</strong>?</p>
-					<p class="italic">How we do create a the <strong class="featured">perfect team</strong>?</p>
+					<p class="italic">How we do create the <strong class="featured">perfect team</strong>?</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
@@ -354,8 +354,8 @@
 				<section>
 					<h3>Why work as a Team</h3>
 					<img src="assets/images/ants.jpg" alt="gears" class="medium margin-none">
-					<p class="small">Interacted, interconnected, organized (self)</p>
-					<p class="small">Adapt, compete & colaborate: <strong>objetive</strong></p>
+					<p class="small">Integrated, interconnected, organized (self)</p>
+					<p class="small">Adapt, compete & colaborate: <strong>objective</strong></p>
 				</section>
 
 				<section>
@@ -469,7 +469,7 @@
 						<tr class="fragment">
 							<td>1</td>
 							<td class="strong">Forming</td>
-							<td>Direct & establish clear objetives</td>
+							<td>Direct & establish clear objectives</td>
 							<td>Find your place</td>
 						</tr>
 						<tr class="fragment">
@@ -735,7 +735,7 @@
 				<section>
 					<img src="assets/images/comic-characters-2022709_960_720.png" alt="Stop" class="small">
 					<p class="italic">"If it works do not change it!"</p>
-					<p class="small">someone will do it better soon or later... <div class="xsmall italic ">(.. and you will be off the market)</div></p>
+					<p class="small">someone will do it better sooner or later... <div class="xsmall italic ">(.. and you will be off the market)</div></p>
 				</section>
 
 				<section>
@@ -783,9 +783,9 @@
 					<div><img src="assets/images/team.png" alt="Team" class="small margin-none"></div>
 					<p class="small">Team Name ≠ project name</p>
 					<ul class="small">
-						<li>What make us <strong>special</strong>?</li>
+						<li>What makes us <strong>special</strong>?</li>
 						<li>What do we want to <strong>remember</strong>?</li>
-						<li>What do <strong>represent</strong> us?</li>
+						<li>What <strong>represents</strong> us?</li>
 					</ul>
 				</section>
 
