--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
 				<section>
 					<p class="small"><em>We have heard about <span class="fragment">code, </span><span class="fragment">libraries, </span><span class="fragment">infrastructure, </span><span class="fragment">processes... but</span></em></p>
 					<p class="fragment">What about <strong class="featured">you</strong>?</p>
-					<p class="fragment">What about <strong class="featured">us</strong>?</p>
 				</section>
 
 				<section>
@@ -130,7 +129,7 @@
 					<h3>Resources</h3>
 					<div><img src="assets/images/puzzle.png" class="large margin-none" alt="Puzzle"></div>
 					<p>People as Interchangeable <strong class="featured">Resources</strong></p>
-					<p class="fragment" data-fragment-index="0">Are they?</p>
+					<p>Are they?</p>
 				</section>
 
 				<section>
@@ -211,13 +210,13 @@
 					<p class="xsmall">(McConnell, 1996)</p>
 					<img src="assets/images/fail.jpg" alt="Fail" class="small">
 					<ol  class="small right-70">
-						<li>Undermined Motivation</li>
-						<li>Weak personnel</li>
-						<li>Uncontrolled problem employees</li>
+						<li class="strong">Undermined Motivation</li>
+						<li class="strong">Weak personnel</li>
+						<li class="strong">Uncontrolled problem employees</li>
 						<li>Heroics</li>
 						<li>Adding pleople to late project</li>
 						<li>Noisy, crowded offices</li>
-						<li>Friction between developers & customers</li>
+						<li class="strong">Friction between developers & customers</li>
 						<li>Unrealistic expectations</li>
 						<li>Lack of effective project sponsorship</li>
 						<li>Lack of stakeholder buy-in</li>
@@ -227,8 +226,8 @@
 				<section>
 					<h3>Our Real World</h3>
 					<div><img src="assets/images/ideas.png" class="small margin-none" alt="Ideas"></div>
-					<p>Creativity, Motivation, Invidividual Skills, Communication</p>
 					<p class="small">Open to change, not clear specifications, what does the client need?</p>
+					<p>Creativity, Motivation, Invidividual Skills, Communication</p>
 				</section>
 
 				<section>
@@ -257,8 +256,8 @@
 
 				<section>
 					<h3>The Human Side of Enterprise</h3>
-					<p class="xxsmall">(McGregor, 1957)</p>
-					<table class="xsmall cols-2">
+					<p class="xsmall">(McGregor, 1957)</p>
+					<table class="small cols-2">
 						<tr>
 							<th class="right">The <strong class="xxbig featured">X</strong> Theory</th>
 							<th>The <strong class="xxbig featured">Y</strong> Theory</th>
@@ -296,24 +295,28 @@
 					<h3>The overjustfication effect</h3>
 					<p class="xsmall">Concerns about extrinsic motivation</p>
 					<p class="small">Soma Cube Experiment by Eduard Decí, 1969</p>
-					<table class="center">
+					<table class="center align-middle">
 						<tr class="small">
+							<th></th>
 							<th></th>
 							<th>Group A</th>
 							<th>Group B</th>
 						</tr>
 						<tr class="fragment">
 							<td>1</td>
+							<td></td>
 							<td>=</td>
 							<td>=</td>
 						</tr>
 						<tr class="fragment">
 							<td>2</td>
+							<td><img src="assets/images/money.jpg" alt="Money" class="xsmall"></td>
 							<td>↑</td>
 							<td>=</td>
 						</tr>
 						<tr class="fragment">
 							<td>3</td>
+							<td><img src="assets/images/money-off.jpg" alt="Money" class="xsmall"></td>
 							<td class="strong featured">↓</td>
 							<td>=</td>
 						</tr>
