--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 
 				<section>
 					<p class="italic">Great, I've selected the <strong>right people</strong></p>
-					<p class="italic xbig fragment">Do I have a <strong class="featured">team</strong> now?</p>
+					<p class="italic xbig ">Do I have a <strong class="featured">team</strong> now?</p>
 				</section>
 
 				<section>
@@ -499,7 +499,7 @@
 
 				<section>
 					<p class="italic">It looks great! But...</p>
-					<p class="italic xbig fragment">Will they be able to <strong>manage</strong> themselves?</p>
+					<p class="italic xbig">Will they be able to <strong>manage</strong> themselves?</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
@@ -601,7 +601,6 @@
 
 				<section>
 					<p class="italic">The Team is ready, How can I measure its <strong>productivity</strong>?</p>
-					<p class="italic fragment">OK! ...in order to help them</p>
 				</section>
 
 				<section data-background="assets/images/background-secondary-black.png" data-background-color="black">
